{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 107,
  "lineage": "87dd360b-624b-0fee-e277-79f999ad86f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:internet-gateway/igw-0753ddd3adb9ee78d",
            "id": "igw-0753ddd3adb9ee78d",
            "owner_id": "473611897480",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-0a7e19e84eb3d102e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:route-table/rtb-0cef8da0da9f6c37b",
            "id": "rtb-0cef8da0da9f6c37b",
            "owner_id": "473611897480",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0753ddd3adb9ee78d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a7e19e84eb3d102e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007bfe2d63f2a2967",
            "route_table_id": "rtb-0cef8da0da9f6c37b",
            "subnet_id": "subnet-09bbb4b2feca4d76c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet-gw",
            "aws_subnet.mgmt",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:subnet/subnet-09bbb4b2feca4d76c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bbb4b2feca4d76c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473611897480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "management"
            },
            "tags_all": {
              "Name": "management"
            },
            "vpc_id": "vpc-0a7e19e84eb3d102e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de98490107038201",
            "arn": "arn:aws:ec2:us-west-2:473611897480:elastic-ip/eipalloc-0de98490107038201",
            "association_id": "eipassoc-02c1f653da0de25dc",
            "domain": "vpc",
            "id": "eipalloc-0de98490107038201",
            "instance": "i-0ea6560f23a95bdaa",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01e72f894b7e2cb30",
            "private_dns": "ip-10-0-1-7.us-west-2.compute.internal",
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-44-233-237-217.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.237.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-6bf3"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-6bf3"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5_bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095dc6aa4c29a745c",
            "arn": "arn:aws:ec2:us-west-2:473611897480:instance/i-0ea6560f23a95bdaa",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea6560f23a95bdaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "tf-aws-bigip-hvalbuena-key-8529",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01e72f894b7e2cb30"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e72f894b7e2cb30",
            "private_dns": "ip-10-0-1-7.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-44-233-237-217.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.237.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 246,
                "throughput": 0,
                "volume_id": "vol-0612ebf7a38579b55",
                "volume_size": 82,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bbb4b2feca4d76c",
            "tags": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-6bf3",
              "Prefix": "tf-aws-bigip-1nic-6bf3"
            },
            "tags_all": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-6bf3",
              "Prefix": "tf-aws-bigip-1nic-6bf3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09989d4d55ca7aced"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.external_private",
            "module.bigip.aws_network_interface.external_private1",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.private",
            "module.bigip.aws_network_interface.private1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.data.aws_ami.f5_ami",
            "module.bigip.data.aws_secretsmanager_secret.password",
            "module.bigip.data.aws_secretsmanager_secret_version.current",
            "module.bigip.random_id.module_id",
            "module.bigip.random_string.dynamic_password",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id",
            "random_string.password",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:network-interface/eni-01e72f894b7e2cb30",
            "attachment": [
              {
                "attachment_id": "eni-attach-0051b0afb281de83c",
                "device_index": 0,
                "instance": "i-0ea6560f23a95bdaa"
              }
            ],
            "id": "eni-01e72f894b7e2cb30",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:cc:46:7c:6c:81",
            "owner_id": "473611897480",
            "private_dns_name": "ip-10-0-1-7.us-west-2.compute.internal",
            "private_ip": "10.0.1.7",
            "private_ip_list": [
              "10.0.1.7"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09989d4d55ca7aced"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bbb4b2feca4d76c",
            "tags": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-6bf3"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-6bf3"
            }
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06630cc752640545b",
            "arn": "arn:aws:ec2:us-west-2:473611897480:elastic-ip/eipalloc-06630cc752640545b",
            "association_id": "eipassoc-08a0ad83d97af4839",
            "domain": "vpc",
            "id": "eipalloc-06630cc752640545b",
            "instance": "i-0915405128d94607b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0e314849daa5edc6e",
            "private_dns": "ip-10-0-1-237.us-west-2.compute.internal",
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-54-245-93-168.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.93.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-130a"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-130a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5_bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095dc6aa4c29a745c",
            "arn": "arn:aws:ec2:us-west-2:473611897480:instance/i-0915405128d94607b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0915405128d94607b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "tf-aws-bigip-hvalbuena-key-8529",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e314849daa5edc6e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e314849daa5edc6e",
            "private_dns": "ip-10-0-1-237.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-54-245-93-168.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.93.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 246,
                "throughput": 0,
                "volume_id": "vol-0220f96bced57bb81",
                "volume_size": 82,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bbb4b2feca4d76c",
            "tags": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-130a",
              "Prefix": "tf-aws-bigip-1nic-130a"
            },
            "tags_all": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-130a",
              "Prefix": "tf-aws-bigip-1nic-130a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09989d4d55ca7aced"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.external_private",
            "module.bigip.aws_network_interface.external_private1",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.private",
            "module.bigip.aws_network_interface.private1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.data.aws_ami.f5_ami",
            "module.bigip.data.aws_secretsmanager_secret.password",
            "module.bigip.data.aws_secretsmanager_secret_version.current",
            "module.bigip.random_id.module_id",
            "module.bigip.random_string.dynamic_password",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id",
            "random_string.password",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:network-interface/eni-0e314849daa5edc6e",
            "attachment": [
              {
                "attachment_id": "eni-attach-0df84a55c39757937",
                "device_index": 0,
                "instance": "i-0915405128d94607b"
              }
            ],
            "id": "eni-0e314849daa5edc6e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:dc:31:44:bd:79",
            "owner_id": "473611897480",
            "private_dns_name": "ip-10-0-1-237.us-west-2.compute.internal",
            "private_ip": "10.0.1.237",
            "private_ip_list": [
              "10.0.1.237"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.237"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09989d4d55ca7aced"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bbb4b2feca4d76c",
            "tags": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-130a"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-130a"
            }
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[2]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052d6bfa78dbafaa3",
            "arn": "arn:aws:ec2:us-west-2:473611897480:elastic-ip/eipalloc-052d6bfa78dbafaa3",
            "association_id": "eipassoc-0171a14bcdea89649",
            "domain": "vpc",
            "id": "eipalloc-052d6bfa78dbafaa3",
            "instance": "i-08f63f669c2b0ab64",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0f04792deeec85b52",
            "private_dns": "ip-10-0-1-116.us-west-2.compute.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-54-184-157-13.us-west-2.compute.amazonaws.com",
            "public_ip": "54.184.157.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-bd46"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-bd46"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5_bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095dc6aa4c29a745c",
            "arn": "arn:aws:ec2:us-west-2:473611897480:instance/i-08f63f669c2b0ab64",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f63f669c2b0ab64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "tf-aws-bigip-hvalbuena-key-8529",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f04792deeec85b52"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f04792deeec85b52",
            "private_dns": "ip-10-0-1-116.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-54-184-157-13.us-west-2.compute.amazonaws.com",
            "public_ip": "54.184.157.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 246,
                "throughput": 0,
                "volume_id": "vol-011bf151a73e07285",
                "volume_size": 82,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bbb4b2feca4d76c",
            "tags": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-bd46",
              "Prefix": "tf-aws-bigip-1nic-bd46"
            },
            "tags_all": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-bd46",
              "Prefix": "tf-aws-bigip-1nic-bd46"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09989d4d55ca7aced"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.external_private",
            "module.bigip.aws_network_interface.external_private1",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.private",
            "module.bigip.aws_network_interface.private1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.data.aws_ami.f5_ami",
            "module.bigip.data.aws_secretsmanager_secret.password",
            "module.bigip.data.aws_secretsmanager_secret_version.current",
            "module.bigip.random_id.module_id",
            "module.bigip.random_string.dynamic_password",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id",
            "random_string.password",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[2]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:network-interface/eni-0f04792deeec85b52",
            "attachment": [
              {
                "attachment_id": "eni-attach-06a7d590ecbbe72ab",
                "device_index": 0,
                "instance": "i-08f63f669c2b0ab64"
              }
            ],
            "id": "eni-0f04792deeec85b52",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:37:1c:dc:81:5f",
            "owner_id": "473611897480",
            "private_dns_name": "ip-10-0-1-116.us-west-2.compute.internal",
            "private_ip": "10.0.1.116",
            "private_ip_list": [
              "10.0.1.116"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.116"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09989d4d55ca7aced"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bbb4b2feca4d76c",
            "tags": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-bd46"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-bd46"
            }
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:security-group/sg-09989d4d55ca7aced",
            "description": "Security group for BIG-IP Management",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09989d4d55ca7aced",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-aws-bigip-mgmt-nsg-8529-20250111223202020600000004",
            "name_prefix": "tf-aws-bigip-mgmt-nsg-8529-",
            "owner_id": "473611897480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-aws-bigip-mgmt-nsg-8529"
            },
            "tags_all": {
              "Name": "tf-aws-bigip-mgmt-nsg-8529"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0a7e19e84eb3d102e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3231810703",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09989d4d55ca7aced",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2072776992",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09989d4d55ca7aced",
            "security_group_rule_id": "sgr-0ddca5f1139a139bb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 8443,
            "id": "sgrule-1566673555",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09989d4d55ca7aced",
            "security_group_rule_id": "sgr-039f27ef6292edacf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3739238550",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09989d4d55ca7aced",
            "security_group_rule_id": "sgr-010841020f372eeb6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:network-acl/acl-0a09e0be5bb99feb4",
            "default_network_acl_id": "acl-0a09e0be5bb99feb4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a09e0be5bb99feb4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "473611897480",
            "subnet_ids": [
              "subnet-09bbb4b2feca4d76c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7e19e84eb3d102e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:route-table/rtb-0877c662bf638060e",
            "default_route_table_id": "rtb-0877c662bf638060e",
            "id": "rtb-0877c662bf638060e",
            "owner_id": "473611897480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a7e19e84eb3d102e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:security-group/sg-05fa70ad700880602",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05fa70ad700880602",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "473611897480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7e19e84eb3d102e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:473611897480:vpc/vpc-0a7e19e84eb3d102e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a09e0be5bb99feb4",
            "default_route_table_id": "rtb-0877c662bf638060e",
            "default_security_group_id": "sg-05fa70ad700880602",
            "dhcp_options_id": "dopt-07cc07a8bb98187ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7e19e84eb3d102e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0877c662bf638060e",
            "owner_id": "473611897480",
            "tags": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-8529",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}